--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.49.2",
     "react-paginate": "^8.2.0",
     "react-parallax": "^3.5.1",
     "react-rating": "^2.0.5",
@@ -27,6 +28,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
