--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.4.0",
+    "axios": "^1.6.4",
     "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -20,6 +21,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
     "react-parallax": "^3.5.1",
     "react-rating": "^2.0.5",
